--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: aqua;
+    color: crimson;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -87,7 +87,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: black;
+    background: crimson;
 }
 .navbar .max-width{
     display: flex;
@@ -100,7 +100,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: aqua;
+    color: crimson;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -119,10 +119,10 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: aqua;
+    color: crimson;
 }
 .navbar.sticky .menu li a:hover{
-    color: aqua;
+    color: crimson;
 }
 
 /* menu btn styling */
@@ -136,7 +136,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: aqua;
+    background: crimson;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -196,18 +196,18 @@ section .title::after{
 }
 .home .home-content a{
     display: inline-block;
-    background: aqua;
+    background: crimson;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid aqua;
+    border: 2px solid crimson;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: aqua;
+    color: crimson;
     background: none;
 }
 
@@ -231,13 +231,13 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: aqua;
+    color: crimson;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about h2 span{
-    color: aqua;
+    color: crimson;
     background: none;
 }
 
@@ -250,7 +250,7 @@ section .title::after{
     justify-content: center;
 }
 .projects h2 span{
-    color: aqua;
+    color: crimson;
     background: none;
 }
 .projects .card {
@@ -278,7 +278,7 @@ section .title::after{
 }
 
 .projects .card:hover{
-    background-color: aqua;
+    background-color: crimson;
     color: black;
     cursor: pointer;
     transform: scale(1.04);
@@ -303,7 +303,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .contact h2 span{
-    color: aqua;
+    color: crimson;
     background: none;
 }
 .contact .contact-content .left p{
@@ -381,8 +381,8 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: aqua;
-  border: 2px solid aqua;
+  background: crimson;
+  border: 2px solid crimson;
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
@@ -407,7 +407,7 @@ footer h4:nth-child(1){
     margin-top: 2rem;
 }
 footer span{
-    color: aqua;
+    color: crimson;
 }
 .social{
     display: flex;
