--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: aqua;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -87,7 +87,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: aqua;
 }
 .navbar .max-width{
     display: flex;
@@ -100,7 +100,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: aqua;
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -119,7 +119,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: aqua;
 }
 .navbar.sticky .menu li a:hover{
     color: black;
@@ -136,7 +136,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: aqua;
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -162,15 +162,337 @@ section .title::after{
 
 
 /* home section styling */
-.home{
-    display: flex;
-    background: url("img/background.jpg") no-repeat center;
-    height: 100vh;
-    color: #fff;
-    min-height: 500px;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: 'Ubuntu', sans-serif;
+.home {
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  height: 100vh;
+  color: #fff;
+  overflow: hidden;
+  display: flex;
+  font-family: "Ubuntu", sans-serif;
+  justify-content: center;
+  align-items: center;
+}
+
+.night {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: rotateZ(45deg);
+}
+
+.shooting_star {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 2px;
+  background: linear-gradient(-45deg, #5f91ff, rgba(0, 0, 255, 0));
+  border-radius: 999px;
+  filter: drop-shadow(0 0 6px #699bff);
+  -webkit-animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+          animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+}
+.shooting_star::before {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
+  transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+}
+.shooting_star::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
+  transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+  transform: translateX(50%) rotateZ(-45deg);
+}
+.shooting_star:nth-child(1) {
+  top: calc(50% - -186px);
+  left: calc(50% - 217px);
+  -webkit-animation-delay: 160ms;
+          animation-delay: 160ms;
+}
+.shooting_star:nth-child(1)::before, .shooting_star:nth-child(1)::after {
+  -webkit-animation-delay: 160ms;
+          animation-delay: 160ms;
+}
+.shooting_star:nth-child(2) {
+  top: calc(50% - 121px);
+  left: calc(50% - 275px);
+  -webkit-animation-delay: 9867ms;
+          animation-delay: 9867ms;
+}
+.shooting_star:nth-child(2)::before, .shooting_star:nth-child(2)::after {
+  -webkit-animation-delay: 9867ms;
+          animation-delay: 9867ms;
+}
+.shooting_star:nth-child(3) {
+  top: calc(50% - -67px);
+  left: calc(50% - 217px);
+  -webkit-animation-delay: 5040ms;
+          animation-delay: 5040ms;
+}
+.shooting_star:nth-child(3)::before, .shooting_star:nth-child(3)::after {
+  -webkit-animation-delay: 5040ms;
+          animation-delay: 5040ms;
+}
+.shooting_star:nth-child(4) {
+  top: calc(50% - 66px);
+  left: calc(50% - 61px);
+  -webkit-animation-delay: 5698ms;
+          animation-delay: 5698ms;
+}
+.shooting_star:nth-child(4)::before, .shooting_star:nth-child(4)::after {
+  -webkit-animation-delay: 5698ms;
+          animation-delay: 5698ms;
+}
+.shooting_star:nth-child(5) {
+  top: calc(50% - 41px);
+  left: calc(50% - 117px);
+  -webkit-animation-delay: 8708ms;
+          animation-delay: 8708ms;
+}
+.shooting_star:nth-child(5)::before, .shooting_star:nth-child(5)::after {
+  -webkit-animation-delay: 8708ms;
+          animation-delay: 8708ms;
+}
+.shooting_star:nth-child(6) {
+  top: calc(50% - -141px);
+  left: calc(50% - 172px);
+  -webkit-animation-delay: 2644ms;
+          animation-delay: 2644ms;
+}
+.shooting_star:nth-child(6)::before, .shooting_star:nth-child(6)::after {
+  -webkit-animation-delay: 2644ms;
+          animation-delay: 2644ms;
+}
+.shooting_star:nth-child(7) {
+  top: calc(50% - -112px);
+  left: calc(50% - 14px);
+  -webkit-animation-delay: 4529ms;
+          animation-delay: 4529ms;
+}
+.shooting_star:nth-child(7)::before, .shooting_star:nth-child(7)::after {
+  -webkit-animation-delay: 4529ms;
+          animation-delay: 4529ms;
+}
+.shooting_star:nth-child(8) {
+  top: calc(50% - 18px);
+  left: calc(50% - 154px);
+  -webkit-animation-delay: 8796ms;
+          animation-delay: 8796ms;
+}
+.shooting_star:nth-child(8)::before, .shooting_star:nth-child(8)::after {
+  -webkit-animation-delay: 8796ms;
+          animation-delay: 8796ms;
+}
+.shooting_star:nth-child(9) {
+  top: calc(50% - 160px);
+  left: calc(50% - 286px);
+  -webkit-animation-delay: 8190ms;
+          animation-delay: 8190ms;
+}
+.shooting_star:nth-child(9)::before, .shooting_star:nth-child(9)::after {
+  -webkit-animation-delay: 8190ms;
+          animation-delay: 8190ms;
+}
+.shooting_star:nth-child(10) {
+  top: calc(50% - -118px);
+  left: calc(50% - 125px);
+  -webkit-animation-delay: 7401ms;
+          animation-delay: 7401ms;
+}
+.shooting_star:nth-child(10)::before, .shooting_star:nth-child(10)::after {
+  -webkit-animation-delay: 7401ms;
+          animation-delay: 7401ms;
+}
+.shooting_star:nth-child(11) {
+  top: calc(50% - -98px);
+  left: calc(50% - 272px);
+  -webkit-animation-delay: 7485ms;
+          animation-delay: 7485ms;
+}
+.shooting_star:nth-child(11)::before, .shooting_star:nth-child(11)::after {
+  -webkit-animation-delay: 7485ms;
+          animation-delay: 7485ms;
+}
+.shooting_star:nth-child(12) {
+  top: calc(50% - 101px);
+  left: calc(50% - 88px);
+  -webkit-animation-delay: 5132ms;
+          animation-delay: 5132ms;
+}
+.shooting_star:nth-child(12)::before, .shooting_star:nth-child(12)::after {
+  -webkit-animation-delay: 5132ms;
+          animation-delay: 5132ms;
+}
+.shooting_star:nth-child(13) {
+  top: calc(50% - 176px);
+  left: calc(50% - 256px);
+  -webkit-animation-delay: 6975ms;
+          animation-delay: 6975ms;
+}
+.shooting_star:nth-child(13)::before, .shooting_star:nth-child(13)::after {
+  -webkit-animation-delay: 6975ms;
+          animation-delay: 6975ms;
+}
+.shooting_star:nth-child(14) {
+  top: calc(50% - 100px);
+  left: calc(50% - 70px);
+  -webkit-animation-delay: 1760ms;
+          animation-delay: 1760ms;
+}
+.shooting_star:nth-child(14)::before, .shooting_star:nth-child(14)::after {
+  -webkit-animation-delay: 1760ms;
+          animation-delay: 1760ms;
+}
+.shooting_star:nth-child(15) {
+  top: calc(50% - -183px);
+  left: calc(50% - 259px);
+  -webkit-animation-delay: 4821ms;
+          animation-delay: 4821ms;
+}
+.shooting_star:nth-child(15)::before, .shooting_star:nth-child(15)::after {
+  -webkit-animation-delay: 4821ms;
+          animation-delay: 4821ms;
+}
+.shooting_star:nth-child(16) {
+  top: calc(50% - -102px);
+  left: calc(50% - 245px);
+  -webkit-animation-delay: 725ms;
+          animation-delay: 725ms;
+}
+.shooting_star:nth-child(16)::before, .shooting_star:nth-child(16)::after {
+  -webkit-animation-delay: 725ms;
+          animation-delay: 725ms;
+}
+.shooting_star:nth-child(17) {
+  top: calc(50% - 91px);
+  left: calc(50% - 288px);
+  -webkit-animation-delay: 1386ms;
+          animation-delay: 1386ms;
+}
+.shooting_star:nth-child(17)::before, .shooting_star:nth-child(17)::after {
+  -webkit-animation-delay: 1386ms;
+          animation-delay: 1386ms;
+}
+.shooting_star:nth-child(18) {
+  top: calc(50% - -124px);
+  left: calc(50% - 74px);
+  -webkit-animation-delay: 8980ms;
+          animation-delay: 8980ms;
+}
+.shooting_star:nth-child(18)::before, .shooting_star:nth-child(18)::after {
+  -webkit-animation-delay: 8980ms;
+          animation-delay: 8980ms;
+}
+.shooting_star:nth-child(19) {
+  top: calc(50% - 96px);
+  left: calc(50% - 150px);
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
+}
+.shooting_star:nth-child(19)::before, .shooting_star:nth-child(19)::after {
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
+}
+.shooting_star:nth-child(20) {
+  top: calc(50% - -183px);
+  left: calc(50% - 222px);
+  -webkit-animation-delay: 5474ms;
+          animation-delay: 5474ms;
+}
+.shooting_star:nth-child(20)::before, .shooting_star:nth-child(20)::after {
+  -webkit-animation-delay: 5474ms;
+          animation-delay: 5474ms;
+}
+
+@-webkit-keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@-webkit-keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@-webkit-keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(300px);
+  }
+}
+@keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(300px);
+  }
+}
+@-webkit-keyframes sky {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
+}
+@keyframes sky {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
 }
 .home .max-width{
   width: 100%;
@@ -180,10 +502,7 @@ section .title::after{
   margin-right: 0;
 }
 .home .home-content .text-1{
-    font-size: 40px;
-}
-.home .home-content .text1{
-    font-size: 40px;
+    font-size: 30px;
 }
 .home .home-content .text-2{
     font-size: 75px;
@@ -196,18 +515,18 @@ section .title::after{
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: aqua;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid aqua;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: aqua;
     background: none;
 }
 
@@ -231,13 +550,13 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: aqua;
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about h2 span{
-    color: crimson;
+    color: aqua;
     background: none;
 }
 
@@ -250,7 +569,7 @@ section .title::after{
     justify-content: center;
 }
 .projects h2 span{
-    color: crimson;
+    color: aqua;
     background: none;
 }
 .projects .card {
@@ -278,7 +597,7 @@ section .title::after{
 }
 
 .projects .card:hover{
-    background-color: crimson;
+    background-color: aqua;
     color: white;
     cursor: pointer;
     transform: scale(1.04);
@@ -303,7 +622,7 @@ section .title::after{
     margin-bottom: 10px;
 }
 .contact h2 span{
-    color: crimson;
+    color: aqua;
     background: none;
 }
 .contact .contact-content .left p{
@@ -381,8 +700,8 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: crimson;
-  border: 2px solid crimson;
+  background: aqua;
+  border: 2px solid aqua;
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
@@ -407,7 +726,7 @@ footer h4:nth-child(1){
     margin-top: 2rem;
 }
 footer span{
-    color: crimson;
+    color: aqua;
 }
 .social{
     display: flex;
